--- a/Tarea2.Rmd
+++ b/Tarea2.Rmd
@@ -7,9 +7,8 @@ author:
   - Sofía Bocker Brenes - C11102
 date: "`r Sys.Date()`"
 output: 
-  rmdformats::downcute:
-    default_style: "dark"
-    downcute_theme: "chaos"
+  rmdformats::robobook:
+    highlight: tango
 ---
 
 # Librerías
@@ -22,3 +21,77 @@ pacman::p_load(
   tidyverse
 )
 ```
+
+# Pregunta 1
+
+## Algoritmo de Integración por Montecarlo
+Usando un Algoritmo de Integración por Montecarlo estime la siguiente integral: 
+$$\int_0^1 \dfrac{e^{-x^2}}{1+x^2} \ dx$$ 
+Usando la función _integrate_ de R, estime que el error de aproximación sea menor a $10^{-3}$, y muéstrelo, esta función integrate utiliza el método de Simpson
+
+
+# Pregunta 2
+
+## a) Esperanza de $f_L(L)$
+El valor esperado de una función de pérdida en una póliza de seguros, donde la pérdida $L$, sigue una distribución exponencial con parámetro $\lambda = 1$. Queremos estimar el valor esperando de la siguiente función: 
+$$E[L] = \int_0^\infty Lf_L(L) \ dL$$
+Donde $f_L(L)$ es la función de densidad de la distribución de la pérdida $L$
+
+## b) Programar $f_L(L)$
+Programe la función de pérdida $f_L(L)$ según el enunciado
+
+## c) Muestreo por importancia
+Para muestrear valores extremos de nuestra muestra, podemos usar una distribución auxiliar
+$$g(L) \sim N(3,4)$$
+Implemente un muestreo por importancia con esta función auxiliar, para $n = 10^4$ e indique el valor esperado de la pérdida de los valores extremos, usando como semilla _set.seed(54321)_
+
+# Pregunta 3
+La siguiente muestra indica el tiempo en días entre cada accidente laboral de una empresa:
+$$2.72, 1.93, 1.76, 0.49, 6.12, 0.43, 4.01, 1.71, 2.01, 5.96$$
+Se sabe que los tiempos entre accidentes poseen una distribución exponencial de parámetro $\lambda$. Usaremos como función a priori de $\lambda$ una distribución gamma de parámetros (2,1)
+
+## a) Valor estimado de 𝜆
+Indique el valor estimado de $\lambda$, utilizando el algoritmo de Aceptación y Rechazo.
+
+## b) Distribución de 𝜆
+Construya el histograma para la distribución de $\lambda$
+
+## c) Generaciones
+Indique el número de generaciones, número medio de generaciones y proporción de rechazos de la estimación realizada
+
+## d) Intervalo de credibilidad
+Determine un intervalo de credibilidad al 99% para el parámetro $\lambda$ estimado
+
+## e) Hipótesis
+Aceptaría o rechazaría la hipótesis que $\lambda = 0.5$, basados en el intervalo de credibilidad anterior. 
+
+# Pregunta 4
+Sea $f(x) = \exp\left(\frac{\sin(10x)}{10\cos(x)}\right)$, para $x \in [0,10]$
+
+## a) Algoritmo de recalentamiento simulado
+Utilizando el algoritmo de recalentamiento simulado estime el mínimo global en [0,10], con valor inicial en 5
+
+## b) Gráfico de estados 
+Grafique el resultado de los estados donde estuvo la cadena de la estimación del punto a.
+
+# Pregunta 5
+Dada una muestra de siniestros observados por periodo:
+$$4,2,5,6,3,4,7,5,6,4$$
+Suponemos que el número de siniestros en cada periodo sigue una distribución de Poisson con un parámetro $\lambda$. Queremos estimar el parámetro $\lambda$ usando el Algoritmo de Metropolis-Hastings, usaremos como función a priori de $\lambda$ una distribución gamma de parámetros (3,2)
+
+## a) Algoritmo de Metropolis-Hastings
+Construya un algoritmo de Metropolis-Hastings que muestree el parámetro $\lambda$, a partir de los datos suministrados con $n = 10^4$
+
+## b) Traceplot
+Gráfique el Traceplot de muestra MCMC del algoritmo
+
+## c) Autocorrelación
+El gráfico de Autocorrelación de la muestra MCMC del algoritmo.
+
+## d) Convergencia de la media
+El gráfico de la convergencia (promedios ergódicos) de la media de la muestra MCMC del algoritmo.
+
+## e) Aceptación
+La tasa de aceptación del algoritmo.
+
+
