--- a/Tarea2.Rmd
+++ b/Tarea2.Rmd
@@ -53,6 +53,33 @@ Se sabe que los tiempos entre accidentes poseen una distribución exponencial de
 ## a) Valor estimado de 𝜆
 Indique el valor estimado de $\lambda$, utilizando el algoritmo de Aceptación y Rechazo.
 
+```{r}
+mas_acc_lab <- c(2.72, 1.93, 1.76, 0.49, 6.12, 0.43, 4.01, 1.71, 2.01, 5.96)
+s_acc_lab <- sum(mas_acc_lab)
+n_acc_lab <- length(mas_acc_lab)
+```
+
+```{r}
+U<-runif(10^4)
+x<-runif(10^4,0,1)
+ngen=length(x)
+dbeta1=Vectorize(function(x) (20*x*(1-x)^3))
+DIB<-dbeta1(x)
+for(i in 1:10^4){
+  while((U[i]*m*1) >= (DIB[i])){ #sustituyo las rechazadas
+    U[i]=runif(1)
+    x[i]=runif(1)
+    DIB[i]<-dbeta1(x[i])
+    ngen=ngen+1
+  }
+}
+
+ValorRes=dbeta1(x)
+
+```
+
+
+
 ## b) Distribución de 𝜆
 Construya el histograma para la distribución de $\lambda$
 
